samples/_failures_safe/1761706014_ba9566_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8c7e3c0.c: In function ‘main’:
./samples/SAFE/__tmp_f8c7e3c0.c:162:34: error: expected ‘)’ at end of input
  162 |         if (strcmp(input, "quit")
      |            ~                     ^
      |                                  )
./samples/SAFE/__tmp_f8c7e3c0.c:162:9: error: expected declaration or statement at end of input
  162 |         if (strcmp(input, "quit")
      |         ^~
./samples/SAFE/__tmp_f8c7e3c0.c:162:9: error: expected declaration or statement at end of input
